// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertObjectsToMarkdown should list the object's interfaces 1`] = `
"## Admin

A user with special rights.

<p style={{ marginBottom: \\"0.4em\\" }}><strong>Implements</strong></p>

- [User](#)

<p style={{ marginBottom: \\"0.4em\\" }}><strong>Fields</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
name<br />
<a href=\\"#\\"><code>String!</code></a>
</td>
<td>
<p>The admin&#39;s name.</p>
</td>
</tr>
</tbody>
</table>

"
`;

exports[`convertObjectsToMarkdown should render objects 1`] = `
"## User

A regular user.

<p style={{ marginBottom: \\"0.4em\\" }}><strong>Fields</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
name<br />
<a href=\\"#\\"><code>String!</code></a>
</td>
<td>
<p>The user&#39;s name.</p>
</td>
</tr>
</tbody>
</table>

"
`;
